versioned_docs/version-0.3.2/scribe/Getting-Started/p0-3-installation.mdx
---
id: p0-3-installation
sidebar_label: Installation
title: Installation
---

- Go to https://github.com/bible-technology/scribe-scripture-editor/releases/tag/v0.2.0

- To download click the Scribe SE program that matches your computer's Operating System (OS). 
  - Supported Operating System 
    - Windows <img src="/autographaAssetsV2/getting-started/windows.png" alt="Windows Icon" width="50px"/>
    - Mac <img src="/autographaAssetsV2/getting-started/mac-os.png" alt="MacOS Icon" width="50px"/>
    - Ubuntu <img src="/autographaAssetsV2/getting-started/linux.png" alt="Linux Icons" width="50px" />

- Right-click on the file to open the menu option. 
- On the menu option, select **Run** or **Open**. 

Windows OS restrictions: If you receive a pop-up screen with the message, “Windows protected your PC,” perform the following actions. 

- Click on the **More Info** button.
- Click the **Run Anyway** button at the bottom of the window.
- Choose Installation options **Only for me**.
- After installing the application, you can use the **Scribe* shortcut automatically created for you on the Desktop to access the application. 

Some devices may prevent the installation of **Scribe** because of operating system restrictions. 



Mac OS restrictions: If you receive a pop-up screen with the message, “Scribe" cannot be opened because the developer cannot be verified,” perform the following actions. 

- Go to **Finder**
- Click on **Applications**
- Locate the **Scribe** application
- **Right-Click** or press the **control key** and click on the **Scribe** icon
- Click **Open**
- A pop-up will appear on the screen saying, “macOS cannot verify the developer of “Scribe”. Are you sure you want to open it?”
- Click **Open** on the pop-up

<video controls src="/assets/how-to-install-1.2.0.mov" width="100%" type="video/mov"/>
 