versioned_docs/version-0.4.0/scribe/Getting-Started/p0-3-installation.mdx
---
id: p0-3-installation
sidebar_label: Installation
title: Installation
---

- Go to https://github.com/bible-technology/scribe-scripture-editor/releases/
- To download click the **Scribe** program that matches your computer's Operating System (OS) 
  - Supported Operating System 
    - Windows <img src="/autographaAssetsV2/getting-started/windows.png" alt="Windows Icon" width="50px"/>
    - Mac <img src="/autographaAssetsV2/getting-started/mac-os.png" alt="MacOS Icon" width="50px"/>
    - Ubuntu <img src="/autographaAssetsV2/getting-started/linux.png" alt="Linux Icons" width="50px" />
- Right-click on the file to open the menu option
- On the menu option, select **Run** or **Open**

**Steps to Install Scribe on Windows OS**
- Double-click the application file (.exe) you've downloaded from the GitHub
-  Follow the instruction until installed
<img src="/assets/installlocation.png"  width="1000px" alt=""/>
Windows OS restrictions: If you receive a pop-up screen with the message, “Windows protected your PC,” perform the following actions. 
- Click on the **More Info** button
<img src="/assets/windows_p.png"  width="1000px" alt=""/>
- Click the **Run Anyway** button at the bottom of the window
<img src="/assets/runanyway.png"  width="1000px" alt=""/>
- Choose Installation options **Only for me**
<img src="/assets/only.png"  width="1000px" alt=""/>
- Follow the instructions in the installation window until **Finish** appears
<img src="/assets/finish.png"  width="1000px" alt=""/>
- After installing the application, you can use the **Scribe* shortcut automatically created for you on the Desktop to access the application
<video controls src="/assets/how-to-install-1.2.0.mov" width="100%" type="video/mov"/>
Some devices may prevent the installation of **Scribe** because of operating system restrictions. 

**Steps to Install Scribe on Mac OS**
- Double-click the application file (.dmg) you've downloaded from the GitHub
<img src="/assets/download.png"  width="1000px" alt=""/> 
- Drag the application to the **Applications** folder
<img src="/assets/drag.png"  width="1000px" alt=""/>
- Open the application from the **Application launcher**

Mac OS restrictions: If you receive a pop-up screen with the message, **Scribe** cannot be opened because the developer cannot be verified,” perform the following actions. 
- A pop-up message will appear on the screen saying, **“macOS cannot verify the developer of “Scribe”. Are you sure you want to open it?”**
<img src="/assets/first.png"  width="1000px" alt=""/> 
- Click **Open** on the pop-up window
- Open **System Settings**
- Go to the left sidebar and choose the **Privacy and Security** tap
- Under **Security**, choose **App Store and identified developers**
- Click **Open Anyway**
- Enter user's password to confirm the selection
<img src="/assets/password.png"  width="1000px" alt=""/> 
- Click **Modify Settings**
<img src="/assets/modify.png"  width="1000px" alt=""/> 
- Click "open" to launch the application

**Steps to Install Scribe on Ubuntu OS**

- Locate the downloaded deb package. By default, the system stores downloaded files in the Downloads directory
<img src="/assets/dload.png"  width="1000px" alt=""/> 
- Right-click the deb file and choose **Open with Another Application**
<img src="/assets/openwith.png"  width="1000px" alt=""/> 
- Select **Software Install** from the program list
- A new dialogue box opens with details about the software
- Click on the **Install** button to proceed
<img src="/assets/intbtn.png"  width="1000px" alt=""/> 
- Enter the user's password when prompted and press **Enter** to authenticate
<img src="/assets/psd.png"  width="1000px" alt=""/> 
- Wait for the installation to complete. When finished, the software is ready to use
<img src="/assets/wait.png"  width="1000px" alt=""/> 